syntax = "proto3";

package chat.v1;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/Jasspie/real-time-chat-app-v2/proto/chat/v1";

message Msg {
    string sender = 1;
    string room = 2;
    string msg = 3;
    google.protobuf.Timestamp timestamp = 4;
}

message ChatRequest {
    oneof payload {
        JoinRoom join = 1;
        SendMsg msg = 2;
    }
}

message JoinRoom {
    string room = 1;
    string user = 2;
}

message SendMsg {
    Msg msg = 1;
}

message ChatResponse {
    Msg msg = 1;
}

message CreateUserRequest {
   string name = 1;
}

message CreateUserResponse {
    int32 error = 1;
    string msg = 2;
}

message CreateRoomRequest {
    string name = 1;
}

message CreateRoomResponse {
    int32 error = 1;
    string msg = 2;
}


message GetRoomUsersRequest {
    string room = 1;
}

message GetRoomUsersResponse {
    string user = 1;
}

service ChatService {
    rpc Chat(ChatRequest) returns (stream ChatResponse);
    rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
    rpc CreateRoom(CreateRoomRequest) returns (CreateRoomResponse);
    rpc GetRoomUsers(GetRoomUsersRequest) returns (stream GetRoomUsersResponse);
}